[package]
name = "bunnyc"
version = "0.1.1"
edition = "2021"
authors = ["Nicholas Stienz <nickstienz@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Nighthawk149149/bunnyc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
